Use api class instead of user

--- a/config/services.yml
+++ b/config/services.yml
@@ -154,7 +154,7 @@ services:
     class: fq\boardnotices\rules\not_in_usergroup
     arguments:
       - '@fq.boardnotices.service.serializer'
-      - '@user'
+      - '@fq.boardnotices.service.phpbb.api'
       - '@fq.boardnotices.repository.users'
 
   fq.boardnotices.rules.has_never_posted:
