--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 	"time": "2019-07-16",
 	"license": "GPL-2.0-only",
 	"authors": [{
-			"name": "Fred Quointeau",
-			"email": "frederic.quointeau@gmail.com",
+			"name": "Mister Q",
+			"email": "gouarfig@yahoo.fr",
 			"homepage": "https://github.com/gouarfig/board-notices",
 			"role": "Developer"
 		}],
