--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ jobs:
     - php: 5.6
       env: DB=sqlite3
     - php: 7.0
-      env: DB=mysqli
+      env: DB=mysqli;SONAR=1
     - php: 7.1
       env: DB=mysqli
     - php: 7.2
-      env: DB=mysqli;SONAR=1
+      env: DB=mysqli
   fast_finish: true
 
 services:
@@ -57,13 +57,15 @@ before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 script:
+  - which php
+  - php -v
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
 # exclude long tests - no coverage output
-  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --exclude-group slow; fi"
+  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' != '1' ]; then php phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --exclude-group slow; fi"
 # all tests and coverage for sonar
-  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' = '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --log-junit phpBB/ext/$EXTNAME/phpunit.xml --coverage-clover phpBB/ext/$EXTNAME/phpunit.coverage.xml; fi"
+  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' = '1' ]; then php phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --log-junit phpBB/ext/$EXTNAME/phpunit.xml --coverage-clover phpBB/ext/$EXTNAME/phpunit.coverage.xml; fi"
 
 after_script:
   - sh -c "if [ '$SONAR' = '1' ]; then sed -i '/ext/d' .gitignore; cd phpBB/ext/$EXTNAME/; sonar-scanner -X; cd ../../../../; fi"
