--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,8 @@ before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 script:
-  - which php
-  - php -v
+  - whereis php
+  - php -i
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
