--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,6 @@ branches:
     - master
     - /^\d+(\.\d+)?\.x$/
 
-before_install:
-  - echo "extension = xdebug.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-
 install:
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
@@ -60,7 +57,7 @@ before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 script:
-  - whereis php
+  - phpenv config-add xdebug.ini
   - php -i
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
