--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,10 @@ branches:
     - master
     - /^\d+(\.\d+)?\.x$/
 
+before_install:
+  # thank you phpBB, but I do need xdebug in travis
+  - mv /home/travis/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini /home/travis/.phpenv/versions/$(phpenv version-name)/etc/conf.d/keep-xdebug.ini
+
 install:
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
@@ -57,15 +61,13 @@ before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 script:
-  - phpenv config-add xdebug.ini
-  - php -i
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
-# exclude long tests - no coverage output
-  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' != '1' ]; then php phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --exclude-group slow; fi"
-# all tests and coverage for sonar
-  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' = '1' ]; then php phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --log-junit phpBB/ext/$EXTNAME/phpunit.xml --coverage-clover phpBB/ext/$EXTNAME/phpunit.coverage.xml; fi"
+  # exclude long tests - no coverage output
+  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.--exclude-group slow; fi"
+  # all tests and coverage for sonar
+  - sh -c "if [ '$NOTESTS' != '1' -a '$SONAR' = '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --log-junit phpBB/ext/$EXTNAME/phpunit.xml --coverage-clover phpBB/ext/$EXTNAME/phpunit.coverage.xml; fi"
 
 after_script:
   - sh -c "if [ '$SONAR' = '1' ]; then sed -i '/ext/d' .gitignore; cd phpBB/ext/$EXTNAME/; sonar-scanner -X; cd ../../../../; fi"
